# contentapi-discord-bridge

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  flake.nix  go.mod  go.sum  main.go  pyproject.toml
.github/workflows/: main.yml
app/: main.py  markup.py
bot/: attachmenthandler.go  attachmenthandler_test.go  avatarstore.go  avatarstore_test.go  channelstore.go  channelstore_test.go  contentapimessagestore.go  contentapimessagestore_test.go  messagehandler.go  messagehandler_test.go  util_test.go  webhookmessagestore.go  webhookmessagestore_test.go
contentapi/: contentapi.go  contentapi_test.go
contentapi_discord_bridge/: contentapi.py  main.py
markup/: Dockerfile  README.md  bun.lockb  client.go  escapes.ts  mdto12y.ts  package.json  render.ts  server.ts
tests/: test_contentapi.py
