[project]
name = "my-app"
version = "0.1.0"
description = "Simple app"

dependencies = ["nextcord", "sqlalchemy", "aiosqlite"]

[tool.setuptools]
packages = ["app"]

# define the CLI executable
# Here, we define the entry point to be the 'main()' function in the module 'app/main.py'
[project.scripts]
cli = "app.main:main"
