[project]
name = "my-app"
version = "0.1.0"
description = "Simple app"

dependencies = ["nextcord", "sqlalchemy", "aiosqlite"]

[tool.setuptools]
packages = ["app"]

# define the CLI executable
# Here, we define the entry point to be the 'main()' function in the module 'app/main.py'
[project.scripts]
cli = "app.main:main"

[tool.poetry]
name = "contentapi-discord-bridge"
version = "0.1.0"
description = "ContentAPI Discord Bridge"
authors = ["ansxor <darienreese@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
nextcord = "2.6.0"
SQLAlchemy = "2.0.34"
aiosqlite = "0.20.0"
setuptools = "75.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
